Updated license header, Javadocs, MoTD, fixes
This commit includes a lot of different changes, and most of them are bug fixes and Javadocs improvements. Only the "idiot-proof" design feature and the JSON connector have been added/completed.

Here is the full changelog:
- added .yml files validation ("idiot-proof" design)
- added the JSON connector (JSONConnector.java)
- /chatlog: added the [-blocked] option and a page switcher
- fixed some query errors with the database connectors
- fixed a bug in GUIs with player heads (GUI.java, ItemStackAdapter.java)
- new violations icons for Negativity (violations-icons.yml), fixed anticheat integration
- better bossbar titles (bossbars.yml)
- wrong default values were returned when reading paths in .yml files
- fixed some placeholders for the Discord and Telegram integrations
- updated libraries to newer versions
- improved HTTP requests
- fixed MoTD-related issues (ClientHandler.java, Client.java)
- fixed some placeholders
- set plugin's website to https://remigio07.me/chatplugin
- various minor optimizations/fixes